--- a/deploymentagent/pom.xml
+++ b/deploymentagent/pom.xml
@@ -16,12 +16,19 @@
 		<java.version>11</java.version>
 		<hibernate-validator.version>6.0.13.Final</hibernate-validator.version>
         <javax.el.version>3.0.0</javax.el.version>
+		
 	</properties>
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter</artifactId>
 		</dependency>
+
+		<!-- <dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-config</artifactId>
+			<version>3.0.4</version>
+		</dependency> -->
 
 		<dependency>
 			<groupId>com.azure.resourcemanager</groupId>
@@ -49,6 +56,12 @@
 			<groupId>org.apache.commons</groupId>
 			<artifactId>commons-compress</artifactId>
 			<version>1.21</version> <!-- {x-version-update;commons-net:commons-net;external_dependency} -->
+		</dependency>
+
+		<dependency>
+			<groupId>com.fasterxml.jackson.dataformat</groupId>
+			<artifactId>jackson-dataformat-yaml</artifactId>
+			<version>2.12.4</version>
 		</dependency>
 
 		<!-- Validation -->
