--- a/deploymentagent/src/main/resources/META-INF/additional-spring-configuration-metadata.json
+++ b/deploymentagent/src/main/resources/META-INF/additional-spring-configuration-metadata.json
@@ -33,5 +33,15 @@
     "name": "springops.git.baseDirectory",
     "type": "java.lang.String",
     "description": "A description for 'springops.git.baseDirectory'"
+  },
+  {
+    "name": "springops.azure-spring-cloud.drift-checking-frequency",
+    "type": "java.lang.Integer",
+    "description": "A description for 'springops.azure-spring-cloud.drift-checking-frequency'"
+  },
+  {
+    "name": "springops.git.frequency",
+    "type": "java.lang.String",
+    "description": "A description for 'springops.git.frequency'"
   }
 ]}
