--- a/deploymentagent/src/main/resources/application.properties
+++ b/deploymentagent/src/main/resources/application.properties
@@ -1,1 +1,4 @@
-
+org.jobrunr.background-job-server.enabled=true
+org.jobrunr.dashboard.enabled=false
+# org.jobrunr.dashboard.port=8080
+# server.port=8080
