--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,7 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+deploymentagent/deploy/terraform/terraform.tfvars
+deploymentagent/deploy/terraform/.terraform/
+deploymentagent/deploy/terraform/.terraform*
+deploymentagent/deploy/terraform/terraform.tfstate*
