--- a/deploymentagent/pom.xml
+++ b/deploymentagent/pom.xml
@@ -38,6 +38,10 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-webflux</artifactId>
+		</dependency>
 
 		<!-- JobRunr -->
 		<dependency>
@@ -59,7 +63,7 @@
 		<dependency>
 			<groupId>com.azure</groupId>
 			<artifactId>azure-identity</artifactId>
-			<version>1.3.3</version> <!-- {x-version-update;com.azure:azure-identity;dependency} -->
+			<version>1.3.4</version> <!-- {x-version-update;com.azure:azure-identity;dependency} -->
 		</dependency>
 
 		<dependency>
