--- a/pom.xml
+++ b/pom.xml
@@ -10,8 +10,7 @@
   <packaging>pom</packaging>
 
   <name>springops-parent</name>
-  <!-- FIXME change it to the project's website -->
-  <url>http://www.example.com</url>
+  <url>https://github.com/felipmiguel/springops</url>
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
