--- a/pom.xml
+++ b/pom.xml
@@ -6,16 +6,23 @@
 
   <groupId>org.springops</groupId>
   <artifactId>springops-parent</artifactId>
-  <version>1.0-SNAPSHOT</version>
+  <version>${springops.version}</version>
   <packaging>pom</packaging>
 
   <name>springops-parent</name>
   <url>https://github.com/felipmiguel/springops</url>
+  <parent>
+		<groupId>org.springframework.boot</groupId>
+		<artifactId>spring-boot-starter-parent</artifactId>
+		<version>2.5.3</version>
+		<relativePath /> <!-- lookup parent from repository -->
+	</parent>
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <maven.compiler.source>1.11</maven.compiler.source>
-    <maven.compiler.target>1.11</maven.compiler.target>
+    <maven.compiler.source>11</maven.compiler.source>
+    <maven.compiler.target>11</maven.compiler.target>
+    <springops.version>1.0-SNAPSHOT</springops.version>
   </properties>
 
   <dependencies>
